# Instrumentacion_Electronica_2026-01

InstrumentacioProyectoF/: .gitignore  CMakeLists.txt  GUIA_THINGSBOARD_COMPLETA.md  README.md  sdkconfig
InstrumentacioProyectoF/Drivers/: CMakeLists.txt  bomb.c  bomb.h  ssd1306.c  ssd1306.h  term.c  term.h  ven.c  ven.h
InstrumentacioProyectoF/main/: CMakeLists.txt  idf_component.yml  main.cpp
PRACTICA_2/Pract_1_Cont_Pulsos/: CMakeLists.txt
PRACTICA_2/Pract_4_PWM/adc/main/: CMakeLists.txt
PRACTICA_3/1_Adivina_Numero/: CMakeLists.txt
PRACTICA_3/1_Adivina_Numero/main/: uart_echo_example_main.c
PRACTICA_3/2_pantalla_LCD/components/potentiometer/: CMakeLists.txt  potentiometer.c  potentiometer.h
PRACTICA_3/2_pantalla_LCD/components/ssd1306/: CMakeLists.txt  ssd1306.c
PRACTICA_3/2_pantalla_LCD/main/: CMakeLists.txt  main.c
PRACTICA_3/3_SENSOR_BMP/: CMakeLists.txt
PRACTICA_3/3_SENSOR_BMP/main/: main.c
PRACTICA_3/4_A_bluetooth/: CMakeLists.txt
PRACTICA_3/4_A_bluetooth/main/: CMakeLists.txt
PRACTICA_3/4_A_bluetooth/main/include/: rgb_led.h
PRACTICA_3/4_A_bluetooth/main/src/: ble_server.c  main.c  rgb_led.c
PRACTICA_3/4_B_WIFI/: CMakeLists.txt  dashboard_http.py
PRACTICA_3/4_B_WIFI/main/: CMakeLists.txt  idf_component.yml  main.c  rgb_led.c
PRACTICA_3/4_C_MQTT/: CMakeLists.txt  dashboard_mqtt.py
PRACTICA_3/4_C_MQTT/main/: CMakeLists.txt  app_main.c  idf_component.yml  rgb_led.h
Pract_1_Cont_Pulsos/main/: main.c
Pract_2_Tiempo_Pulso/main/: main.c
Pract_3_Dectec_luz/main/: main.c
Pract_4_PWM/adc/main/: main.c
(+1 files in other folders)
